<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CrudFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:text="@string/tituloCrudView"
            tools:text="INCLUIR"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crud_cod_funcionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cod"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titulo_view"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crud_cod_funcionario_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAllCaps="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crud_desc_funcionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_completo"
            app:layout_constraintTop_toBottomOf="@id/crud_cod_funcionario"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crud_desc_funcionario_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crud_complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/complemento"
            app:layout_constraintTop_toBottomOf="@id/crud_desc_funcionario"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crud_complemento_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crud_reservado1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/reservado_1"
            app:layout_constraintTop_toBottomOf="@id/crud_complemento"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crud_reservado1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/crud_reservado2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/reservado_2"
            app:layout_constraintTop_toBottomOf="@id/crud_reservado1"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crud_reservado2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/validacao_aviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campos_n_o_podem_ser_vazios"
            android:gravity="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:padding="8dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/crud_reservado2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botao_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/salvar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/crud_reservado2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>